--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
             <section class="plans" >
 
-                <div>
+                <div class="basic">
                     <p class="plansPrecio">PRECIO</p>
                     <p class="plansTipo">Plan básico</p>
                     <p class="plansNumero">$10/mes</p>
@@ -195,7 +195,7 @@
 
                 </div>
 
-                <div>
+                <div class="mid">
                     <p class="plansPrecio">PRECIO</p>
                     <P class="plansTipo">Plan freelancer</P>
                     <p class="plansNumero">$99/mes</p>
@@ -214,7 +214,7 @@
 
                 </div>
 
-                <div>
+                <div class="full">
                     <p class="plansPrecio">PRECIO</p>
                     <p class="plansTipo">Plan empresas</p>
                     <p class="plansNumero">$799/mes</p>
